--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.0", optional = true }
 egui = { version = "0.24", optional = true }
 eframe = { version = "0.24", optional = true }
 egui_plot = { version = "0.24", optional = true }
+dark-light = { version = "1.0", optional = true }
 
 [features]
 default = ["desktop"]
